--- a/macro.html
+++ b/macro.html
@@ -38,6 +38,7 @@
                 <h4>May 3rd, 2020</h4>
                 <p><b>19:05 (00:00:00)</b> - Begin trip</p>
                 <p><b>20:54 (01:49:00)</b> - First text note</p>
+                <button type="button" class="btn btn-blue" onClick="location.reload(); return false;">Reset Tracker</button>
             </div>
         </div>
     </body>
