--- a/macro.html
+++ b/macro.html
@@ -11,8 +11,13 @@
     <body>
         <div class="container">
             <h1>Macrodose Tracking</h1>
-            <br />
-            <button type="button" class="btn btn-green" id="start" onClick="timer.start();">Start Timer</button>
+            <div id="start">
+                <!-- dosage input in ug (disable start button if this is empty or <= 0) -->
+                <form name="dose">
+                    <label for="dosage">Dosage:</label><input type="number" id="dosage" name="dosage" min="1" max="10000" placeholder="1-10000" autocomplete="off"><b>&#13197;</b></input>
+                    <button type="button" class="btn btn-green" onClick="timer.start();">Start Timer</button>
+                </form>
+            </div>
             <div id="menu">
                 <p>
                     <button type="button" class="btn btn-red" onClick="timer.stop();">Stop Trip</button>
@@ -35,9 +40,8 @@
                 <h3 id="duration"></h3>
                 <br />
                 <h2>Journal</h2>
-                <h4>May 3rd, 2020</h4>
-                <p><b>19:05 (00:00:00)</b> - Begin trip</p>
-                <p><b>20:54 (01:49:00)</b> - First text note</p>
+                <h4 id="date"></h4>
+                <p id="journal"></p>
                 <button type="button" class="btn btn-blue" onClick="location.reload(); return false;">Reset Tracker</button>
             </div>
         </div>
