--- a/macro.html
+++ b/macro.html
@@ -13,7 +13,7 @@
             <h1>Macrodose Tracking</h1>
             <div id="start">
                 <!-- dosage input in ug (disable start button if this is empty or <= 0) -->
-                <form name="dose">
+                <form name="start">
                     <label for="dosage">Dosage:</label><input type="number" id="dosage" name="dosage" min="1" max="10000" placeholder="1-10000" autocomplete="off"><b>&#13197;</b></input>
                     <button type="button" class="btn btn-green" onClick="timer.start();">Start Timer</button>
                 </form>
