added a basic visual

--- a/macro.html
+++ b/macro.html
@@ -10,6 +10,38 @@
     </head>
     <body>
         <div class="container">
+            <div class="vortex">
+                <div class="ring el-1"></div>
+                <div class="ring el-2"></div>
+                <div class="ring el-3"></div>
+                <div class="ring el-4"></div>
+                <div class="ring el-5"></div>
+                <div class="ring el-6"></div>
+                <div class="ring el-7"></div>
+                <div class="ring el-8"></div>
+                <div class="ring el-9"></div>
+                <div class="ring el-10"></div>
+                <div class="ring el-11"></div>
+                <div class="ring el-12"></div>
+                <div class="ring el-13"></div>
+                <div class="ring el-14"></div>
+                <div class="ring el-15"></div>
+                <div class="ring el-16"></div>
+                <div class="ring el-17"></div>
+                <div class="ring el-18"></div>
+                <div class="ring el-19"></div>
+                <div class="ring el-20"></div>
+                <div class="ring el-21"></div>
+                <div class="ring el-22"></div>
+                <div class="ring el-23"></div>
+                <div class="ring el-24"></div>
+                <div class="ring el-25"></div>
+                <div class="ring el-26"></div>
+                <div class="ring el-27"></div>
+                <div class="ring el-28"></div>
+                <div class="ring el-29"></div>
+                <div class="ring el-30"></div>
+            </div>
             <h1>Macrodose Tracking</h1>
             <div id="start">
                 <form name="start">
