split vortex to its own files

--- a/macro.html
+++ b/macro.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="common.css">
+        <link rel="stylesheet" href="vortex.css">
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
         <script src="macro.js"></script>
     </head>
