--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Psychedelic Dose and Trip Tracker</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="common.css">
+        <link rel="stylesheet" href="css/common.css">
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     </head>
     <body>
