UI placeholder for save journal function

--- a/macro.html
+++ b/macro.html
@@ -72,6 +72,7 @@
                     <p id="journal"></p>
                 </div>
                 <button type="button" class="btn-blue" onClick="location.reload(); return false;">Reset Tracker</button>
+                <button type="button" class="btn-green" onClick="saveJournal();">Save Journal</button>
             </div>
         </div>
         <iframe src="triangles.html" id="triangles"></iframe>
